--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,8 @@
             rel="stylesheet"
             href="https://bootswatch.com/4/cyborg/bootstrap.css"
         />
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 
         <title>SpaceX Launches App</title>
     </head>
